# voice_it

./: .gitignore  README.md  install.sh  interface.html  interface.py  interface.ui  pyproject.toml  voice-it.desktop  voice-it.py
voice_it/: __init__.py  __main__.py  qrcode.py
voice_it/res/: main_window.ui
